Draws werden noch nicht eingetragen. Es fehlen noch Übersetzungen und aus irgendeinem Grund kann man nur 1 Runde spielen. Aber ansonsten kann man jetzt auch PvP spielen. Das Spiel ist jetzt in mehrere Klassen verteilt.

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -15,7 +15,7 @@
         android:layout_marginBottom="8dp"
         android:gravity="center"
         android:textColor="@color/textColour"
-        android:text="Hello World!"
+        android:text="Let the Games begin!"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -32,6 +32,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/iconscissors"
+        android:onClick="onClickScissors"
         app:layout_constraintEnd_toStartOf="@+id/btnRock"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -45,6 +46,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/iconrock"
+        android:onClick="onClickRock"
         app:layout_constraintBottom_toTopOf="@+id/textResult"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,6 +61,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/iconpaper"
+        android:onClick="onClickPaper"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnRock"
         app:layout_constraintTop_toTopOf="parent" />
@@ -72,6 +75,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/iconlizard"
+        android:onClick="onClickLizard"
         app:layout_constraintBottom_toTopOf="@+id/textResult"
         app:layout_constraintEnd_toStartOf="@+id/btnRock"
         app:layout_constraintHorizontal_bias="1.0"
@@ -88,6 +92,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/iconspock"
+        android:onClick="onClickSpock"
         app:layout_constraintBottom_toTopOf="@+id/textResult"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -122,7 +127,7 @@
         android:layout_marginTop="8dp"
         android:textColor="@color/textColour"
         android:layout_marginBottom="8dp"
-        android:text="@string/leonardPicks"
+        android:text="What am I?"
         app:layout_constraintBottom_toTopOf="@+id/textResult"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnLizard" />
